# DiscordBotWithRust

./: Cargo.toml  LICENSE  README.md  config.json
src/: config.json  main.rs
src/commands/: channels.rs  kind_of_post.rs  mod.rs  neko.rs  role.rs
